# firewatch

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: app.yml
api/: .gitignore  go.mod  go.sum  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 1f88475f3c3a_add_missing_cols.py  2654520e8836_add_created_date.py  3bdf19945976_create_tables.py  411441e7dd6f_fix_camera_event_types.py  431dfa9066a9_add_camera_resouse_video_url.py  a33071ed69ba_add_missing_cols.py  a65a3a0c1931_remove_col.py  bba7b899a323_largeblob_col.py  d48f5be966df_first_migration.py
api/app/: backend_pre_start.py  main.py
api/app/api/: api.py  deps.py
api/app/clients/: sns_client.py
api/app/core/: config.py
api/app/db/: base_repository.py
api/app/features/alerts/: alerts_repository.py  camera_event_repository.py  camera_repository.py  router.py  schemas.py
api/app/features/health/: router.py
api/app/models/: __init__.py  alert.py  base_class.py  camera.py  camera_event.py
api/cmd/api/: main.go
api/internal/grpc/: server.go
api/internal/models/: event.go
api/internal/rest/: server.go
api/scripts/: lint.sh  run.sh
app/: .eslintrc-copy.json  .firebaserc  package.json
app/public/: index.html
app/src/: App.jsx  theme.js
model/tests/: download.sh  export_tflite.py
rpi/: detect_picamera.py
rpi_simulation/: .gitignore  detect_from_video.py  output.avi  requirements.txt  test_base64.txt
webpanel/: .eslint.json  package.json
webpanel/public/: index.html
webpanel/src/: App.test.tsx  App.tsx  index.tsx
(+44 files in other folders)
