[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
autopep8 = "^1.5.6"
pyodbc = "^4.0.30"
SQLAlchemy = "^1.4.11"
mangum = "^0.11.0"
email-validator = "^1.1.2"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
mypy = "^0.812"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

